--- a/FamousQuoteQuiz.App/Views/Main/Index.cshtml
+++ b/FamousQuoteQuiz.App/Views/Main/Index.cshtml
@@ -35,8 +35,8 @@
     @if (IsBinaryMode.BinaryMode)
     {
         <div class="row">
-            <div class="col-sm-3 btn btn-xs btn_binMode btn-yes" id="answer-true">Yes</div>
-            <div class="col-sm-offset-6 col-sm-3 btn btn-xs btn_binMode btn-no" id="answer-false">No</div>
+            <div class="col-sm-3 btn btn-xs btn_binMode btn-yes" id="true">Yes</div>
+            <div class="col-sm-offset-6 col-sm-3 btn btn-xs btn_binMode btn-no" id="false">No</div>
         </div>
     }
 
