--- a/FamousQuoteQuiz.App/Views/Main/_ResultView.cshtml
+++ b/FamousQuoteQuiz.App/Views/Main/_ResultView.cshtml
@@ -11,5 +11,5 @@ else
 {
     <span>Sorry, you are wrong! </span>
 }
-<span>The right answer is: @Model.Item1</span>
+    <span>The right answer is:<p id ="answerName">@Model.Item1</p></span>
 </div>
